# FYP

./: .gitignore  README.md  docker-compose.yml  models.txt  spec.md
.claude/: CLAUDE.md  settings.json
.github/workflows/: ci.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
agent-runtime/: .gitignore  main.py  pyproject.toml
agent-runtime/agent/: agent.py
agent-runtime/mcp/: __init__.py  client.py
agent-runtime/prompts/: reasoning.txt
agent-runtime/reasoning/: __init__.py  engine.py
agent-runtime/tests/: __init__.py  test_agent.py  test_config.py  test_mcp_client.py
agent-runtime/utils/: timer.py
dashboard/: package-lock.json  package.json
dashboard/src/app/: layout.tsx  page.tsx
dashboard/src/app/agents/: page.tsx
dashboard/src/app/agents/[id]/: page.tsx
dashboard/src/app/clusters/: page.tsx
dashboard/src/app/clusters/[id]/: page.tsx
dashboard/src/app/clusters/group/[name]/: page.tsx
dashboard/src/app/compare/: page.tsx
dashboard/src/app/graph/: page.tsx
dashboard/src/app/insights/: page.tsx
dashboard/src/app/settings/: page.tsx
dashboard/src/app/traces/: page.tsx
dashboard/src/app/traces/[id]/: page.tsx
dashboard/src/components/agents/: chat-message.tsx  chat-view.tsx
dashboard/src/components/clusters/: cluster-execution-graph.tsx  cluster-performance-chart.tsx  optimal-path-graph.tsx
dashboard/src/components/compare/: delta-card.test.tsx  delta-card.tsx  performance-over-time-chart.tsx  savings-chart.tsx
dashboard/src/components/dashboard/: activity-feed.tsx  mode-donut.tsx  savings-banner.tsx  stat-card.tsx
dashboard/src/components/graph/: detail-panel.tsx  execution-dag.tsx  layout-utils.ts  tool-node.tsx
dashboard/src/components/insights/: bottleneck-chart.tsx  cost-leak-list.test.tsx  cost-leak-list.tsx
dashboard/src/components/layout/: sidebar.tsx
dashboard/src/components/traces/: conformance.tsx  optimization-context.tsx  step-table.tsx  trace-timeline.tsx
dashboard/src/components/ui/: info-tooltip.tsx  tabs.tsx
dashboard/src/hooks/: use-websocket.ts
dashboard/src/lib/: api.ts  format.test.ts  format.ts  path-matching.ts  types.ts
demo/agent-runtime/: .env.example  config.json  demo_runner.py  main.py  pyproject.toml
demo/agent-runtime/agent/: __init__.py  agent.py
demo/agent-runtime/mcp/: client.py
demo/agent-runtime/mode_selector/: __init__.py  selector.py
demo/agent-runtime/orchestrator/: __init__.py  orchestrator.py
demo/agent-runtime/prompts/: __init__.py  reasoning.txt  templates.py
demo/agent-runtime/reasoning/: engine.py
demo/agent-runtime/tests/: conftest.py  test_config.py  test_demo_runner.py  test_mcp_client.py
demo/agent-runtime/utils/: __init__.py  config.py  exceptions.py  interfaces.py  logger.py
demo/fulfillment/: .env.example  pyproject.toml  seed.sql  start_servers.sh
demo/fulfillment/inventory_server/: main.py  schemas.py  tools.py
demo/fulfillment/mcp_server/: database.py  main.py  schemas.py  tools.py
demo/fulfillment/notifications_server/: main.py  schemas.py  tools.py
demo/fulfillment/payments_server/: main.py  schemas.py  tools.py
demo/fulfillment/promotions_server/: main.py  schemas.py  tools.py
demo/fulfillment/risk_server/: main.py  schemas.py  tools.py
demo/fulfillment/runner/: composite_client.py  demo_runner.py
demo/langchain/: callback.py  logger.py  pyproject.toml  tools.py
demo/langchain/multi_agent/: graph.py  main.py
demo/langchain/multi_agent/prompts/: refund.txt  supervisor.txt  support.txt
demo/langchain/single_agent/: main.py
demo/langchain/single_agent/prompts/: reasoning.txt
demo/langchain/tests/: conftest.py  test_callback.py  test_graph.py  test_tools.py
demo/mcp-tool-server/: data.py  logger.py  main.py  pyproject.toml  state.py
demo/mcp-tool-server/tests/: conftest.py  test_api.py  test_state.py  test_tools.py
demo/mcp-tool-server/tools/: __init__.py  customer.py  knowledge.py  order.py  schemas.py  shipping.py  ticket.py  warranty.py
mcp-tool-server/: main.py  pyproject.toml  tools.py
platform/analysis/: .env.example  pyproject.toml
platform/analysis/prompts/: cluster_name.txt
platform/analysis/src/analysis/: __init__.py  clustering.py  config.py  database.py  decision_tree.py  failure_warnings.py  graph.py  logger.py  models.py  naming.py  optimizer.py  patterns.py  pipeline.py  suggestions.py  traces.py
platform/analysis/tests/: conftest.py  test_clustering.py  test_config.py  test_database.py  test_decision_tree.py  test_failure_warnings.py  test_graph.py  test_logger.py  test_models.py  test_naming.py  test_optimizer.py  test_patterns.py  test_pipeline.py  test_suggestions.py  test_traces.py
platform/collector/: .env.example  pyproject.toml
platform/collector/migrations/: 001_initial.sql  002_upgrade_embeddings.sql  003_switch_to_gemini_embeddings.sql  004_add_llm_prompt.sql  005_add_regression_monitor.sql  006_add_failure_warnings.sql  007_add_alternative_paths.sql  008_add_decision_tree.sql
platform/collector/src/collector/: __init__.py  app.py  config.py  database.py  embeddings.py  logger.py  models.py  websocket.py
platform/collector/src/collector/routes/: __init__.py  actions.py  analytics.py  dashboard.py  events.py  optimize.py  workflows.py  ws.py
platform/collector/tests/: conftest.py  test_app.py  test_database.py  test_embeddings.py  test_routes_actions.py  test_routes_analytics.py  test_routes_dashboard.py  test_routes_events.py  test_routes_optimize.py  test_routes_workflows.py  test_routes_ws.py  test_websocket.py
public-docs/: architecture.md  project-diary.md
scripts/: check-guided-status.sh  delete_guided.py  delete_guided.sh  delete_guided.sql  reset-db.sh  reset-paths.sh  run-demo.sh  start-platform.sh
sdk/: pyproject.toml
sdk/src/workflow_optimizer/: __init__.py  client.py  exceptions.py  models.py  trace.py  transport.py
sdk/tests/: conftest.py  test_client.py  test_models.py  test_trace.py  test_transport.py
