[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agent*", "mcp*", "mode_selector*", "orchestrator*", "prompts*", "reasoning*", "utils*"]

[project]
name = "agent-runtime"
version = "0.1.0"
description = "Multi-agent orchestration system with Gemini-powered autonomous agents"
requires-python = ">=3.11"

dependencies = [
    "litellm>=1.0.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "aioresponses>=0.7.6",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
agent-runtime = "main:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
